--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "roblox-moderation-system",
-  "version": "2.0.0",
+  "name": "roblox-moderation-service",
+  "version": "3.0.0",
   "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
-    "discord.js": "^14.18.0",
-    "express": "^4.19.2",
-    "pg": "^8.12.0"
-  },
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "discord.js": "^14.15.3",
+    "express": "^4.19.2",
+    "pg": "^8.11.5",
+    "node-fetch": "^3.3.2"
   }
 }
